<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.mario.storemarketplace.ui.fragment.DetailProductFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner_image_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:elevation="3dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_detail_image_product"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name_detail_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/product_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cv_banner_image_detail"
        app:layout_constraintTop_toBottomOf="@+id/cv_banner_image_detail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_price_detail_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_10_00"
        android:textColor="@color/yellow_red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_detail_product"
        app:layout_constraintStart_toStartOf="@id/tv_desc_detail_product"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_detail_product" />

    <TextView
        android:id="@+id/tv_desc_detail_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_title_description"
        app:layout_constraintEnd_toEndOf="@+id/cv_banner_image_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_name_detail_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail_product" />

    <Button
        android:id="@+id/btn_add_product_to_cart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:drawablePadding="16dp"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>