<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="id.mario.storemarketplace.ui.fragment.HomeFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal">

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

            <include layout="@layout/shimmer_item_home" />

        </GridLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_home_main"
        app:spanCount="2"
        tools:listitem="@layout/item_product_home" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:indeterminateTint="@color/yellow_red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        app:endIconMode="custom"
        app:endIconTint="#aaaaaa"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/cartIconImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_product"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColorHint="@color/background" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/cartIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cartimage"
        android:src="@drawable/ic_cart_main_menu"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchView" />

    <TextView
        android:id="@+id/cartBadge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:background="@drawable/cart_badge"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/cartIconImageView"
        app:layout_constraintTop_toTopOf="@+id/cartIconImageView" />


    <TextView
        android:id="@+id/tv_desc_home_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/what_would_you_like_to_buy_today"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />


</androidx.constraintlayout.widget.ConstraintLayout>